--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--приложение-->
-  <script type="module" src="/src/index.jsx"></script>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 
 </html>
